--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -25,3 +25,6 @@ $midnight-blue: #14112c;
 $midnight: #10162c;
 $lavender: #817bdf;
 $teal: #4fd2c2;
+$input-fill: #f6f7f9;
+$fb-blue: #448ccb;
+$blue-steel: #a5b0bd;
